parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> empty
Rule 3     statement -> content SEMICOLON
Rule 4     statement -> content SEMICOLON statement
Rule 5     statement -> noSM statement
Rule 6     statement -> noSM
Rule 7     content -> declaration
Rule 8     content -> assignment
Rule 9     content -> definicion_ajson
Rule 10    noSM -> function
Rule 11    noSM -> condition
Rule 12    noSM -> loop
Rule 13    entero -> ENTERO
Rule 14    decimal -> DECIMAL
Rule 15    num -> entero
Rule 16    num -> decimal
Rule 17    bool -> TR
Rule 18    bool -> FL
Rule 19    declaration -> LET id
Rule 20    id -> var
Rule 21    id -> var COMA id
Rule 22    id -> var IGUAL expr
Rule 23    id -> var IGUAL expr COMA id
Rule 24    var -> CSINCOMILLAS
Rule 25    var -> CSINCOMILLAS PUNTOS tipo
Rule 26    tipo_ajson -> CSINCOMILLAS
Rule 27    tipo -> INT
Rule 28    tipo -> FLOAT
Rule 29    tipo -> CHARACTER
Rule 30    tipo -> BOOLEAN
Rule 31    tipo -> tipo_ajson
Rule 32    assignment -> var IGUAL expr
Rule 33    variable -> CSINCOMILLAS
Rule 34    cadena -> CARACTER
Rule 35    parentesis -> LPARENT expr RPARENT
Rule 36    signos -> SUMA expr
Rule 37    signos -> RESTA expr
Rule 38    expr -> operacion
Rule 39    expr -> num
Rule 40    expr -> bool
Rule 41    expr -> NULL
Rule 42    expr -> variable
Rule 43    expr -> signos
Rule 44    expr -> cadena
Rule 45    expr -> ajson
Rule 46    expr -> parentesis
Rule 47    expr -> pc
Rule 48    expr -> functioncall
Rule 49    operacion -> aritmetica
Rule 50    operacion -> binaria
Rule 51    operacion -> comparation
Rule 52    aritmetica -> expr SUMA expr
Rule 53    aritmetica -> expr RESTA expr
Rule 54    aritmetica -> expr MUL expr
Rule 55    aritmetica -> expr DIV expr
Rule 56    binaria -> expr AND expr
Rule 57    binaria -> expr OR expr
Rule 58    binaria -> NOT expr
Rule 59    comparation -> expr LE expr
Rule 60    comparation -> expr LT expr
Rule 61    comparation -> expr GE expr
Rule 62    comparation -> expr GT expr
Rule 63    comparation -> expr EQ expr
Rule 64    definicion_ajson -> TYPE CSINCOMILLAS IGUAL ajson_t
Rule 65    ajson_t -> LBRACKET object_t RBRACKET
Rule 66    object_t -> pair_t COMA object_t
Rule 67    object_t -> pair_t COMA
Rule 68    object_t -> pair_t
Rule 69    pair_t -> clave PUNTOS tipo
Rule 70    pair_t -> clave PUNTOS ajson_t
Rule 71    clave -> CCOMILLAS
Rule 72    clave -> CSINCOMILLAS
Rule 73    ajson -> LBRACKET object RBRACKET
Rule 74    object -> pair COMA object
Rule 75    object -> pair COMA
Rule 76    object -> pair
Rule 77    pair -> clave PUNTOS expr
Rule 78    punto_valor -> punto1
Rule 79    punto_valor -> punto2
Rule 80    punto_valor -> punto_corchete
Rule 81    pc -> punto_valor
Rule 82    pc -> corchete
Rule 83    punto1 -> CSINCOMILLAS PUNTO CSINCOMILLAS
Rule 84    punto2 -> CSINCOMILLAS PUNTO punto_valor
Rule 85    punto_corchete -> CSINCOMILLAS PUNTO corchete
Rule 86    corchete -> CSINCOMILLAS LCORCHETE CCOMILLAS RCORCHETE recur_corchete
Rule 87    recur_corchete -> LCORCHETE CCOMILLAS RCORCHETE recur_corchete
Rule 88    recur_corchete -> empty
Rule 89    recur_corchete -> PUNTO CSINCOMILLAS
Rule 90    recur_corchete -> PUNTO punto_valor
Rule 91    condition -> IF LPARENT expr RPARENT LBRACKET statement RBRACKET
Rule 92    condition -> IF LPARENT expr RPARENT LBRACKET statement RBRACKET ELSE LBRACKET statement RBRACKET
Rule 93    loop -> WHILE LPARENT expr RPARENT LBRACKET statement RBRACKET
Rule 94    function -> function_no_args
Rule 95    function -> function_args
Rule 96    function_args -> FUNCTION CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
Rule 97    function_args -> FUNCTION CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET
Rule 98    function_no_args -> FUNCTION CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
Rule 99    function_no_args -> FUNCTION CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET
Rule 100   arg_list -> CSINCOMILLAS PUNTOS tipo
Rule 101   arg_list -> CSINCOMILLAS PUNTOS tipo COMA arg_list
Rule 102   functioncall -> CSINCOMILLAS LPARENT RPARENT
Rule 103   functioncall -> CSINCOMILLAS LPARENT argumentos RPARENT
Rule 104   argumentos -> expr
Rule 105   argumentos -> expr COMA argumentos
Rule 106   empty -> <empty>

Terminals, with rules where they appear

AND                  : 56
BOOLEAN              : 30
CARACTER             : 34
CCOMILLAS            : 71 86 87
CHARACTER            : 29
COMA                 : 21 23 66 67 74 75 101 105
CSINCOMILLAS         : 24 25 26 33 64 72 83 83 84 85 86 89 96 97 98 99 100 101 102 103
DECIMAL              : 14
DIV                  : 55
ELSE                 : 92
ENTERO               : 13
EQ                   : 63
FL                   : 18
FLOAT                : 28
FUNCTION             : 96 97 98 99
GE                   : 61
GT                   : 62
IF                   : 91 92
IGUAL                : 22 23 32 64
INT                  : 27
LBRACKET             : 65 73 91 92 92 93 96 97 98 99
LCORCHETE            : 86 87
LE                   : 59
LET                  : 19
LPARENT              : 35 91 92 93 96 97 98 99 102 103
LT                   : 60
MUL                  : 54
NOT                  : 58
NULL                 : 41
OR                   : 57
PUNTO                : 83 84 85 89 90
PUNTOS               : 25 69 70 77 96 97 98 99 100 101
RBRACKET             : 65 73 91 92 92 93 96 97 98 99
RCORCHETE            : 86 87
RESTA                : 37 53
RETURN               : 96 97 98 99
RPARENT              : 35 91 92 93 96 97 98 99 102 103
SEMICOLON            : 3 4 96 97 98 99
SUMA                 : 36 52
TR                   : 17
TYPE                 : 64
WHILE                : 93
error                : 

Nonterminals, with rules where they appear

ajson                : 45
ajson_t              : 64 70
arg_list             : 96 97 101
argumentos           : 103 105
aritmetica           : 49
assignment           : 8
binaria              : 50
bool                 : 40
cadena               : 44
clave                : 69 70 77
comparation          : 51
condition            : 11
content              : 3 4
corchete             : 82 85
decimal              : 16
declaration          : 7
definicion_ajson     : 9
empty                : 2 88
entero               : 15
expr                 : 22 23 32 35 36 37 52 52 53 53 54 54 55 55 56 56 57 57 58 59 59 60 60 61 61 62 62 63 63 77 91 92 93 96 97 98 99 104 105
function             : 10
function_args        : 95
function_no_args     : 94
functioncall         : 48
id                   : 19 21 23
loop                 : 12
noSM                 : 5 6
num                  : 39
object               : 73 74
object_t             : 65 66
operacion            : 38
pair                 : 74 75 76
pair_t               : 66 67 68
parentesis           : 46
pc                   : 47
program              : 0
punto1               : 78
punto2               : 79
punto_corchete       : 80
punto_valor          : 81 84 90
recur_corchete       : 86 87
signos               : 43
statement            : 1 4 5 91 92 92 93 96 98
tipo                 : 25 69 96 97 98 99 100 101
tipo_ajson           : 31
var                  : 20 21 22 23 32
variable             : 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . empty
    (3) statement -> . content SEMICOLON
    (4) statement -> . content SEMICOLON statement
    (5) statement -> . noSM statement
    (6) statement -> . noSM
    (106) empty -> .
    (7) content -> . declaration
    (8) content -> . assignment
    (9) content -> . definicion_ajson
    (10) noSM -> . function
    (11) noSM -> . condition
    (12) noSM -> . loop
    (19) declaration -> . LET id
    (32) assignment -> . var IGUAL expr
    (64) definicion_ajson -> . TYPE CSINCOMILLAS IGUAL ajson_t
    (94) function -> . function_no_args
    (95) function -> . function_args
    (91) condition -> . IF LPARENT expr RPARENT LBRACKET statement RBRACKET
    (92) condition -> . IF LPARENT expr RPARENT LBRACKET statement RBRACKET ELSE LBRACKET statement RBRACKET
    (93) loop -> . WHILE LPARENT expr RPARENT LBRACKET statement RBRACKET
    (24) var -> . CSINCOMILLAS
    (25) var -> . CSINCOMILLAS PUNTOS tipo
    (98) function_no_args -> . FUNCTION CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (99) function_no_args -> . FUNCTION CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET
    (96) function_args -> . FUNCTION CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (97) function_args -> . FUNCTION CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET

    $end            reduce using rule 106 (empty -> .)
    LET             shift and go to state 12
    TYPE            shift and go to state 14
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    CSINCOMILLAS    shift and go to state 15
    FUNCTION        shift and go to state 20

    program                        shift and go to state 1
    statement                      shift and go to state 2
    empty                          shift and go to state 3
    content                        shift and go to state 4
    noSM                           shift and go to state 5
    declaration                    shift and go to state 6
    assignment                     shift and go to state 7
    definicion_ajson               shift and go to state 8
    function                       shift and go to state 9
    condition                      shift and go to state 10
    loop                           shift and go to state 11
    var                            shift and go to state 13
    function_no_args               shift and go to state 16
    function_args                  shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .

    $end            reduce using rule 1 (program -> statement .)


state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (3) statement -> content . SEMICOLON
    (4) statement -> content . SEMICOLON statement

    SEMICOLON       shift and go to state 21


state 5

    (5) statement -> noSM . statement
    (6) statement -> noSM .
    (3) statement -> . content SEMICOLON
    (4) statement -> . content SEMICOLON statement
    (5) statement -> . noSM statement
    (6) statement -> . noSM
    (7) content -> . declaration
    (8) content -> . assignment
    (9) content -> . definicion_ajson
    (10) noSM -> . function
    (11) noSM -> . condition
    (12) noSM -> . loop
    (19) declaration -> . LET id
    (32) assignment -> . var IGUAL expr
    (64) definicion_ajson -> . TYPE CSINCOMILLAS IGUAL ajson_t
    (94) function -> . function_no_args
    (95) function -> . function_args
    (91) condition -> . IF LPARENT expr RPARENT LBRACKET statement RBRACKET
    (92) condition -> . IF LPARENT expr RPARENT LBRACKET statement RBRACKET ELSE LBRACKET statement RBRACKET
    (93) loop -> . WHILE LPARENT expr RPARENT LBRACKET statement RBRACKET
    (24) var -> . CSINCOMILLAS
    (25) var -> . CSINCOMILLAS PUNTOS tipo
    (98) function_no_args -> . FUNCTION CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (99) function_no_args -> . FUNCTION CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET
    (96) function_args -> . FUNCTION CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (97) function_args -> . FUNCTION CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET

    $end            reduce using rule 6 (statement -> noSM .)
    RBRACKET        reduce using rule 6 (statement -> noSM .)
    RETURN          reduce using rule 6 (statement -> noSM .)
    LET             shift and go to state 12
    TYPE            shift and go to state 14
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    CSINCOMILLAS    shift and go to state 15
    FUNCTION        shift and go to state 20

    noSM                           shift and go to state 5
    statement                      shift and go to state 22
    content                        shift and go to state 4
    declaration                    shift and go to state 6
    assignment                     shift and go to state 7
    definicion_ajson               shift and go to state 8
    function                       shift and go to state 9
    condition                      shift and go to state 10
    loop                           shift and go to state 11
    var                            shift and go to state 13
    function_no_args               shift and go to state 16
    function_args                  shift and go to state 17

state 6

    (7) content -> declaration .

    SEMICOLON       reduce using rule 7 (content -> declaration .)


state 7

    (8) content -> assignment .

    SEMICOLON       reduce using rule 8 (content -> assignment .)


state 8

    (9) content -> definicion_ajson .

    SEMICOLON       reduce using rule 9 (content -> definicion_ajson .)


state 9

    (10) noSM -> function .

    LET             reduce using rule 10 (noSM -> function .)
    TYPE            reduce using rule 10 (noSM -> function .)
    IF              reduce using rule 10 (noSM -> function .)
    WHILE           reduce using rule 10 (noSM -> function .)
    CSINCOMILLAS    reduce using rule 10 (noSM -> function .)
    FUNCTION        reduce using rule 10 (noSM -> function .)
    $end            reduce using rule 10 (noSM -> function .)
    RBRACKET        reduce using rule 10 (noSM -> function .)
    RETURN          reduce using rule 10 (noSM -> function .)


state 10

    (11) noSM -> condition .

    LET             reduce using rule 11 (noSM -> condition .)
    TYPE            reduce using rule 11 (noSM -> condition .)
    IF              reduce using rule 11 (noSM -> condition .)
    WHILE           reduce using rule 11 (noSM -> condition .)
    CSINCOMILLAS    reduce using rule 11 (noSM -> condition .)
    FUNCTION        reduce using rule 11 (noSM -> condition .)
    $end            reduce using rule 11 (noSM -> condition .)
    RBRACKET        reduce using rule 11 (noSM -> condition .)
    RETURN          reduce using rule 11 (noSM -> condition .)


state 11

    (12) noSM -> loop .

    LET             reduce using rule 12 (noSM -> loop .)
    TYPE            reduce using rule 12 (noSM -> loop .)
    IF              reduce using rule 12 (noSM -> loop .)
    WHILE           reduce using rule 12 (noSM -> loop .)
    CSINCOMILLAS    reduce using rule 12 (noSM -> loop .)
    FUNCTION        reduce using rule 12 (noSM -> loop .)
    $end            reduce using rule 12 (noSM -> loop .)
    RBRACKET        reduce using rule 12 (noSM -> loop .)
    RETURN          reduce using rule 12 (noSM -> loop .)


state 12

    (19) declaration -> LET . id
    (20) id -> . var
    (21) id -> . var COMA id
    (22) id -> . var IGUAL expr
    (23) id -> . var IGUAL expr COMA id
    (24) var -> . CSINCOMILLAS
    (25) var -> . CSINCOMILLAS PUNTOS tipo

    CSINCOMILLAS    shift and go to state 15

    id                             shift and go to state 23
    var                            shift and go to state 24

state 13

    (32) assignment -> var . IGUAL expr

    IGUAL           shift and go to state 25


state 14

    (64) definicion_ajson -> TYPE . CSINCOMILLAS IGUAL ajson_t

    CSINCOMILLAS    shift and go to state 26


state 15

    (24) var -> CSINCOMILLAS .
    (25) var -> CSINCOMILLAS . PUNTOS tipo

    IGUAL           reduce using rule 24 (var -> CSINCOMILLAS .)
    COMA            reduce using rule 24 (var -> CSINCOMILLAS .)
    SEMICOLON       reduce using rule 24 (var -> CSINCOMILLAS .)
    PUNTOS          shift and go to state 27


state 16

    (94) function -> function_no_args .

    LET             reduce using rule 94 (function -> function_no_args .)
    TYPE            reduce using rule 94 (function -> function_no_args .)
    IF              reduce using rule 94 (function -> function_no_args .)
    WHILE           reduce using rule 94 (function -> function_no_args .)
    CSINCOMILLAS    reduce using rule 94 (function -> function_no_args .)
    FUNCTION        reduce using rule 94 (function -> function_no_args .)
    $end            reduce using rule 94 (function -> function_no_args .)
    RBRACKET        reduce using rule 94 (function -> function_no_args .)
    RETURN          reduce using rule 94 (function -> function_no_args .)


state 17

    (95) function -> function_args .

    LET             reduce using rule 95 (function -> function_args .)
    TYPE            reduce using rule 95 (function -> function_args .)
    IF              reduce using rule 95 (function -> function_args .)
    WHILE           reduce using rule 95 (function -> function_args .)
    CSINCOMILLAS    reduce using rule 95 (function -> function_args .)
    FUNCTION        reduce using rule 95 (function -> function_args .)
    $end            reduce using rule 95 (function -> function_args .)
    RBRACKET        reduce using rule 95 (function -> function_args .)
    RETURN          reduce using rule 95 (function -> function_args .)


state 18

    (91) condition -> IF . LPARENT expr RPARENT LBRACKET statement RBRACKET
    (92) condition -> IF . LPARENT expr RPARENT LBRACKET statement RBRACKET ELSE LBRACKET statement RBRACKET

    LPARENT         shift and go to state 28


state 19

    (93) loop -> WHILE . LPARENT expr RPARENT LBRACKET statement RBRACKET

    LPARENT         shift and go to state 29


state 20

    (98) function_no_args -> FUNCTION . CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (99) function_no_args -> FUNCTION . CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET
    (96) function_args -> FUNCTION . CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (97) function_args -> FUNCTION . CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET

    CSINCOMILLAS    shift and go to state 30


state 21

    (3) statement -> content SEMICOLON .
    (4) statement -> content SEMICOLON . statement
    (3) statement -> . content SEMICOLON
    (4) statement -> . content SEMICOLON statement
    (5) statement -> . noSM statement
    (6) statement -> . noSM
    (7) content -> . declaration
    (8) content -> . assignment
    (9) content -> . definicion_ajson
    (10) noSM -> . function
    (11) noSM -> . condition
    (12) noSM -> . loop
    (19) declaration -> . LET id
    (32) assignment -> . var IGUAL expr
    (64) definicion_ajson -> . TYPE CSINCOMILLAS IGUAL ajson_t
    (94) function -> . function_no_args
    (95) function -> . function_args
    (91) condition -> . IF LPARENT expr RPARENT LBRACKET statement RBRACKET
    (92) condition -> . IF LPARENT expr RPARENT LBRACKET statement RBRACKET ELSE LBRACKET statement RBRACKET
    (93) loop -> . WHILE LPARENT expr RPARENT LBRACKET statement RBRACKET
    (24) var -> . CSINCOMILLAS
    (25) var -> . CSINCOMILLAS PUNTOS tipo
    (98) function_no_args -> . FUNCTION CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (99) function_no_args -> . FUNCTION CSINCOMILLAS LPARENT RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET
    (96) function_args -> . FUNCTION CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (97) function_args -> . FUNCTION CSINCOMILLAS LPARENT arg_list RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET

    $end            reduce using rule 3 (statement -> content SEMICOLON .)
    RBRACKET        reduce using rule 3 (statement -> content SEMICOLON .)
    RETURN          reduce using rule 3 (statement -> content SEMICOLON .)
    LET             shift and go to state 12
    TYPE            shift and go to state 14
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    CSINCOMILLAS    shift and go to state 15
    FUNCTION        shift and go to state 20

    content                        shift and go to state 4
    statement                      shift and go to state 31
    noSM                           shift and go to state 5
    declaration                    shift and go to state 6
    assignment                     shift and go to state 7
    definicion_ajson               shift and go to state 8
    function                       shift and go to state 9
    condition                      shift and go to state 10
    loop                           shift and go to state 11
    var                            shift and go to state 13
    function_no_args               shift and go to state 16
    function_args                  shift and go to state 17

state 22

    (5) statement -> noSM statement .

    $end            reduce using rule 5 (statement -> noSM statement .)
    RBRACKET        reduce using rule 5 (statement -> noSM statement .)
    RETURN          reduce using rule 5 (statement -> noSM statement .)


state 23

    (19) declaration -> LET id .

    SEMICOLON       reduce using rule 19 (declaration -> LET id .)


state 24

    (20) id -> var .
    (21) id -> var . COMA id
    (22) id -> var . IGUAL expr
    (23) id -> var . IGUAL expr COMA id

    SEMICOLON       reduce using rule 20 (id -> var .)
    COMA            shift and go to state 32
    IGUAL           shift and go to state 33


state 25

    (32) assignment -> var IGUAL . expr
    (38) expr -> . operacion
    (39) expr -> . num
    (40) expr -> . bool
    (41) expr -> . NULL
    (42) expr -> . variable
    (43) expr -> . signos
    (44) expr -> . cadena
    (45) expr -> . ajson
    (46) expr -> . parentesis
    (47) expr -> . pc
    (48) expr -> . functioncall
    (49) operacion -> . aritmetica
    (50) operacion -> . binaria
    (51) operacion -> . comparation
    (15) num -> . entero
    (16) num -> . decimal
    (17) bool -> . TR
    (18) bool -> . FL
    (33) variable -> . CSINCOMILLAS
    (36) signos -> . SUMA expr
    (37) signos -> . RESTA expr
    (34) cadena -> . CARACTER
    (73) ajson -> . LBRACKET object RBRACKET
    (35) parentesis -> . LPARENT expr RPARENT
    (81) pc -> . punto_valor
    (82) pc -> . corchete
    (102) functioncall -> . CSINCOMILLAS LPARENT RPARENT
    (103) functioncall -> . CSINCOMILLAS LPARENT argumentos RPARENT
    (52) aritmetica -> . expr SUMA expr
    (53) aritmetica -> . expr RESTA expr
    (54) aritmetica -> . expr MUL expr
    (55) aritmetica -> . expr DIV expr
    (56) binaria -> . expr AND expr
    (57) binaria -> . expr OR expr
    (58) binaria -> . NOT expr
    (59) comparation -> . expr LE expr
    (60) comparation -> . expr LT expr
    (61) comparation -> . expr GE expr
    (62) comparation -> . expr GT expr
    (63) comparation -> . expr EQ expr
    (13) entero -> . ENTERO
    (14) decimal -> . DECIMAL
    (78) punto_valor -> . punto1
    (79) punto_valor -> . punto2
    (80) punto_valor -> . punto_corchete
    (86) corchete -> . CSINCOMILLAS LCORCHETE CCOMILLAS RCORCHETE recur_corchete
    (83) punto1 -> . CSINCOMILLAS PUNTO CSINCOMILLAS
    (84) punto2 -> . CSINCOMILLAS PUNTO punto_valor
    (85) punto_corchete -> . CSINCOMILLAS PUNTO corchete

    NULL            shift and go to state 38
    TR              shift and go to state 51
    FL              shift and go to state 52
    CSINCOMILLAS    shift and go to state 53
    SUMA            shift and go to state 54
    RESTA           shift and go to state 55
    CARACTER        shift and go to state 56
    LBRACKET        shift and go to state 57
    LPARENT         shift and go to state 58
    NOT             shift and go to state 61
    ENTERO          shift and go to state 62
    DECIMAL         shift and go to state 63

    expr                           shift and go to state 34
    operacion                      shift and go to state 35
    num                            shift and go to state 36
    bool                           shift and go to state 37
    variable                       shift and go to state 39
    signos                         shift and go to state 40
    cadena                         shift and go to state 41
    ajson                          shift and go to state 42
    parentesis                     shift and go to state 43
    pc                             shift and go to state 44
    functioncall                   shift and go to state 45
    aritmetica                     shift and go to state 46
    binaria                        shift and go to state 47
    comparation                    shift and go to state 48
    entero                         shift and go to state 49
    decimal                        shift and go to state 50
    punto_valor                    shift and go to state 59
    corchete                       shift and go to state 60
    punto1                         shift and go to state 64
    punto2                         shift and go to state 65
    punto_corchete                 shift and go to state 66

state 26

    (64) definicion_ajson -> TYPE CSINCOMILLAS . IGUAL ajson_t

    IGUAL           shift and go to state 67


state 27

    (25) var -> CSINCOMILLAS PUNTOS . tipo
    (27) tipo -> . INT
    (28) tipo -> . FLOAT
    (29) tipo -> . CHARACTER
    (30) tipo -> . BOOLEAN
    (31) tipo -> . tipo_ajson
    (26) tipo_ajson -> . CSINCOMILLAS

    INT             shift and go to state 70
    FLOAT           shift and go to state 71
    CHARACTER       shift and go to state 72
    BOOLEAN         shift and go to state 73
    CSINCOMILLAS    shift and go to state 68

    tipo                           shift and go to state 69
    tipo_ajson                     shift and go to state 74

state 28

    (91) condition -> IF LPARENT . expr RPARENT LBRACKET statement RBRACKET
    (92) condition -> IF LPARENT . expr RPARENT LBRACKET statement RBRACKET ELSE LBRACKET statement RBRACKET
    (38) expr -> . operacion
    (39) expr -> . num
    (40) expr -> . bool
    (41) expr -> . NULL
    (42) expr -> . variable
    (43) expr -> . signos
    (44) expr -> . cadena
    (45) expr -> . ajson
    (46) expr -> . parentesis
    (47) expr -> . pc
    (48) expr -> . functioncall
    (49) operacion -> . aritmetica
    (50) operacion -> . binaria
    (51) operacion -> . comparation
    (15) num -> . entero
    (16) num -> . decimal
    (17) bool -> . TR
    (18) bool -> . FL
    (33) variable -> . CSINCOMILLAS
    (36) signos -> . SUMA expr
    (37) signos -> . RESTA expr
    (34) cadena -> . CARACTER
    (73) ajson -> . LBRACKET object RBRACKET
    (35) parentesis -> . LPARENT expr RPARENT
    (81) pc -> . punto_valor
    (82) pc -> . corchete
    (102) functioncall -> . CSINCOMILLAS LPARENT RPARENT
    (103) functioncall -> . CSINCOMILLAS LPARENT argumentos RPARENT
    (52) aritmetica -> . expr SUMA expr
    (53) aritmetica -> . expr RESTA expr
    (54) aritmetica -> . expr MUL expr
    (55) aritmetica -> . expr DIV expr
    (56) binaria -> . expr AND expr
    (57) binaria -> . expr OR expr
    (58) binaria -> . NOT expr
    (59) comparation -> . expr LE expr
    (60) comparation -> . expr LT expr
    (61) comparation -> . expr GE expr
    (62) comparation -> . expr GT expr
    (63) comparation -> . expr EQ expr
    (13) entero -> . ENTERO
    (14) decimal -> . DECIMAL
    (78) punto_valor -> . punto1
    (79) punto_valor -> . punto2
    (80) punto_valor -> . punto_corchete
    (86) corchete -> . CSINCOMILLAS LCORCHETE CCOMILLAS RCORCHETE recur_corchete
    (83) punto1 -> . CSINCOMILLAS PUNTO CSINCOMILLAS
    (84) punto2 -> . CSINCOMILLAS PUNTO punto_valor
    (85) punto_corchete -> . CSINCOMILLAS PUNTO corchete

    NULL            shift and go to state 38
    TR              shift and go to state 51
    FL              shift and go to state 52
    CSINCOMILLAS    shift and go to state 53
    SUMA            shift and go to state 54
    RESTA           shift and go to state 55
    CARACTER        shift and go to state 56
    LBRACKET        shift and go to state 57
    LPARENT         shift and go to state 58
    NOT             shift and go to state 61
    ENTERO          shift and go to state 62
    DECIMAL         shift and go to state 63

    expr                           shift and go to state 75
    operacion                      shift and go to state 35
    num                            shift and go to state 36
    bool                           shift and go to state 37
    variable                       shift and go to state 39
    signos                         shift and go to state 40
    cadena                         shift and go to state 41
    ajson                          shift and go to state 42
    parentesis                     shift and go to state 43
    pc                             shift and go to state 44
    functioncall                   shift and go to state 45
    aritmetica                     shift and go to state 46
    binaria                        shift and go to state 47
    comparation                    shift and go to state 48
    entero                         shift and go to state 49
    decimal                        shift and go to state 50
    punto_valor                    shift and go to state 59
    corchete                       shift and go to state 60
    punto1                         shift and go to state 64
    punto2                         shift and go to state 65
    punto_corchete                 shift and go to state 66

state 29

    (93) loop -> WHILE LPARENT . expr RPARENT LBRACKET statement RBRACKET
    (38) expr -> . operacion
    (39) expr -> . num
    (40) expr -> . bool
    (41) expr -> . NULL
    (42) expr -> . variable
    (43) expr -> . signos
    (44) expr -> . cadena
    (45) expr -> . ajson
    (46) expr -> . parentesis
    (47) expr -> . pc
    (48) expr -> . functioncall
    (49) operacion -> . aritmetica
    (50) operacion -> . binaria
    (51) operacion -> . comparation
    (15) num -> . entero
    (16) num -> . decimal
    (17) bool -> . TR
    (18) bool -> . FL
    (33) variable -> . CSINCOMILLAS
    (36) signos -> . SUMA expr
    (37) signos -> . RESTA expr
    (34) cadena -> . CARACTER
    (73) ajson -> . LBRACKET object RBRACKET
    (35) parentesis -> . LPARENT expr RPARENT
    (81) pc -> . punto_valor
    (82) pc -> . corchete
    (102) functioncall -> . CSINCOMILLAS LPARENT RPARENT
    (103) functioncall -> . CSINCOMILLAS LPARENT argumentos RPARENT
    (52) aritmetica -> . expr SUMA expr
    (53) aritmetica -> . expr RESTA expr
    (54) aritmetica -> . expr MUL expr
    (55) aritmetica -> . expr DIV expr
    (56) binaria -> . expr AND expr
    (57) binaria -> . expr OR expr
    (58) binaria -> . NOT expr
    (59) comparation -> . expr LE expr
    (60) comparation -> . expr LT expr
    (61) comparation -> . expr GE expr
    (62) comparation -> . expr GT expr
    (63) comparation -> . expr EQ expr
    (13) entero -> . ENTERO
    (14) decimal -> . DECIMAL
    (78) punto_valor -> . punto1
    (79) punto_valor -> . punto2
    (80) punto_valor -> . punto_corchete
    (86) corchete -> . CSINCOMILLAS LCORCHETE CCOMILLAS RCORCHETE recur_corchete
    (83) punto1 -> . CSINCOMILLAS PUNTO CSINCOMILLAS
    (84) punto2 -> . CSINCOMILLAS PUNTO punto_valor
    (85) punto_corchete -> . CSINCOMILLAS PUNTO corchete

    NULL            shift and go to state 38
    TR              shift and go to state 51
    FL              shift and go to state 52
    CSINCOMILLAS    shift and go to state 53
    SUMA            shift and go to state 54
    RESTA           shift and go to state 55
    CARACTER        shift and go to state 56
    LBRACKET        shift and go to state 57
    LPARENT         shift and go to state 58
    NOT             shift and go to state 61
    ENTERO          shift and go to state 62
    DECIMAL         shift and go to state 63

    expr                           shift and go to state 76
    operacion                      shift and go to state 35
    num                            shift and go to state 36
    bool                           shift and go to state 37
    variable                       shift and go to state 39
    signos                         shift and go to state 40
    cadena                         shift and go to state 41
    ajson                          shift and go to state 42
    parentesis                     shift and go to state 43
    pc                             shift and go to state 44
    functioncall                   shift and go to state 45
    aritmetica                     shift and go to state 46
    binaria                        shift and go to state 47
    comparation                    shift and go to state 48
    entero                         shift and go to state 49
    decimal                        shift and go to state 50
    punto_valor                    shift and go to state 59
    corchete                       shift and go to state 60
    punto1                         shift and go to state 64
    punto2                         shift and go to state 65
    punto_corchete                 shift and go to state 66

state 30

    (98) function_no_args -> FUNCTION CSINCOMILLAS . LPARENT RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (99) function_no_args -> FUNCTION CSINCOMILLAS . LPARENT RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET
    (96) function_args -> FUNCTION CSINCOMILLAS . LPARENT arg_list RPARENT PUNTOS tipo LBRACKET statement RETURN expr SEMICOLON RBRACKET
    (97) function_args -> FUNCTION CSINCOMILLAS . LPARENT arg_list RPARENT PUNTOS tipo LBRACKET RETURN expr SEMICOLON RBRACKET

    LPARENT         shift and go to state 77


state 31

    (4) statement -> content SEMICOLON statement .

    $end            reduce using rule 4 (statement -> content SEMICOLON statement .)
    RBRACKET        reduce using rule 4 (statement -> content SEMICOLON statement .)
    RETURN          reduce using rule 4 (statement -> content SEMICOLON statement .)


state 32

    (21) id -> var COMA . id
    (20) id -> . var
    (21) id -> . var COMA id
    (22) id -> . var IGUAL expr
    (23) id -> . var IGUAL expr COMA id
